# Aperture

./: AI.md  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  Aperture-1.0.0-Foundation-Release.zip.sha256  Aperture-2.0.0-RC2.2.zip.sha256  BACKLOG.md  BUILD_WINDOWS_INSTALLER_README.md  CHANGELOG.md  CLEANUP_AND_UPGRADE.md  CODING_STANDARD.md  CONFIGURATION.md  DATABASE.md  GUI.md  INSTALLATION.md  Install Aperture.cmd  PHILOSOPHY.md  PLUGIN_API.md  PROJECT_SPEC.md  QUICKSTART_WINDOWS.md  README FIRST.txt  RELEASE_MANIFEST.json  RELEASE_NOTES.md  ROADMAP.md  Release 1 activities and estimations.docx  Repair Aperture.cmd  Uninstall Aperture.cmd  VALIDATION.md  VERSION  gitignore  pyproject.toml
docs/: PHILOSOPHY.md  PROJECT_HANDOVER.md  README.md  VERSION2_DEVELOPMENT_CHARTER.md  VISION.md
docs/accessibility/: ACCESSIBILITY_AND_KEYBOARD.md
docs/developer/: PLATFORM_CERTIFICATION.md  README.md  offline-map-packages.md  release-process.md
docs/getting-started/: installation.md  quick-start.md
docs/operations/: backup-recovery.md  deployment-and-upgrades.md  health-center.md  maintenance-center.md  offline-updates.md  release-readiness-qa.md  startup-performance.md  troubleshooting.md  update-index.example.json
docs/user-guide/: README.md  ai-and-resources.md  help-system.md  import-export.md  native-update-recovery.md  offline-maps.md  taxonomy-library.md
environment/: README.md  environment-core.yml  environment-dev.yml  environment-full.yml  environment-gui.yml  environment.yml
github/workflows/: ci.yml
requirements/: ai.txt  constraints-py311.txt  core.txt  dev.txt  gui.txt
resources/: README.md  default-branding.toml
resources/templates/: ecological-context.example.csv  model-package.example.json  prompt-set.example.json  taxonomy-package.example.json  taxonomy.example.csv
scripts/: benchmark_persistence.py  build_aperture_windows_installer.ps1  cleanup_old_builds.ps1  collect_installer_diagnostics.ps1  deployment_preflight.py  install_aperture_frontend.ps1  install_staged_update.ps1  install_windows.ps1  repair_windows_integration.ps1  restore_staged_backup.ps1  select_natureai_library.bat  start_admin_console.bat  start_natureai_next.bat  start_natureai_next_debug.bat  start_windows.ps1  uninstall_windows.ps1  validate.py  verify_install.bat  verify_install.py
