[build-system]
requires = ["hatchling>=1.26,<2"]
build-backend = "hatchling.build"

[project]
name = "natureai-next"
version = "2.0.0rc2.post2"
description = "Completely offline wildlife photo management for Windows"
readme = "PROJECT_SPEC.md"
requires-python = ">=3.11,<3.12"
license = { text = "Proprietary" }
authors = [{ name = "NatureAI Next" }]
dependencies = [
  "packaging>=24,<26",
  "platformdirs>=4.2,<5",
  "Pillow>=11,<13",
  "pyshp>=2.3,<3",
  "cryptography>=44,<47",
  "typing-extensions>=4.12,<5; python_version < '3.12'",
]

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.6,<8",
  "import-linter>=2.1,<3",
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.7,<1",
]
gui = ["PySide6>=6.8,<6.9"]
ai = ["torch>=2.5,<2.8", "torchvision>=0.20,<0.23", "open-clip-torch>=2.30,<3", "hnswlib>=0.8,<0.9"]

[project.scripts]
natureai-next = "natureai_next.bootstrap.cli:main"
natureai-next-admin = "natureai_next.bootstrap.admin_cli:main"
natureai-next-resources = "natureai_next.bootstrap.resource_cli:main"
aperture-updater = "natureai_next.bootstrap.native_updater:main"
aperture-recovery = "natureai_next.bootstrap.native_recovery:main"

[project.gui-scripts]
aperture = "natureai_next.bootstrap.aperture_launcher:main"
aperture-maintenance-center = "natureai_next.bootstrap.maintenance_center:main"
aperture-backup-recovery = "natureai_next.bootstrap.maintenance_center:main"

[tool.hatch.build.targets.wheel]
packages = ["src/natureai_next"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "ANN", "ARG", "PTH", "S"]
ignore = ["ANN401", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "ARG", "S"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["natureai_next"]
warn_unreachable = true
show_error_codes = true

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
markers = [
  "contract: stable API and adapter contract tests",
  "integration: integration tests",
  "migration: schema or configuration migration tests",
  "performance: repeatable performance tests",
]

[tool.coverage.run]
branch = true
source = ["natureai_next"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85

[tool.importlinter]
root_package = "natureai_next"

[[tool.importlinter.contracts]]
name = "Domain is independent"
type = "forbidden"
source_modules = ["natureai_next.domain"]
forbidden_modules = [
  "natureai_next.application",
  "natureai_next.ports",
  "natureai_next.infrastructure",
  "natureai_next.jobs",
  "natureai_next.plugins",
  "natureai_next.ui",
  "natureai_next.bootstrap",
  "natureai_next.plugin_api",
]

[[tool.importlinter.contracts]]
name = "Ports do not depend on outer layers"
type = "forbidden"
source_modules = ["natureai_next.ports"]
forbidden_modules = [
  "natureai_next.application",
  "natureai_next.infrastructure",
  "natureai_next.jobs",
  "natureai_next.plugins",
  "natureai_next.ui",
  "natureai_next.bootstrap",
]

[[tool.importlinter.contracts]]
name = "Application does not depend on adapters"
type = "forbidden"
source_modules = ["natureai_next.application"]
forbidden_modules = [
  "natureai_next.infrastructure",
  "natureai_next.plugins",
  "natureai_next.ui",
  "natureai_next.bootstrap",
]

[[tool.importlinter.contracts]]
name = "UI does not depend on infrastructure"
type = "forbidden"
source_modules = ["natureai_next.ui"]
forbidden_modules = ["natureai_next.infrastructure"]
